--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.29",
     "@fortawesome/free-brands-svg-icons": "^5.13.1",
     "@fortawesome/vue-fontawesome": "^0.1.10",
+    "axios": "^0.19.2",
     "buefy": "^0.8.20",
     "core-js": "^3.6.5",
     "node-sass": "^4.14.1",
     "sass-loader": "^8.0.2",
     "vue": "^2.6.11",
+    "vue-axios": "^2.1.5",
     "vue-router": "^3.3.4"
   },
   "devDependencies": {
