--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "@quasar/extras": "^1.0.0",
     "axios": "^0.20.0",
     "core-js": "^3.6.5",
+    "firebase": "^8.3.1",
     "quasar": "^1.0.0",
     "vue": "^2.6.11",
     "vue-axios": "^2.1.5",
-    "vue-router": "^3.4.3"
+    "vue-router": "^3.4.3",
+    "vuefire": "^2.2.5",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
