--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.0.0",
+    "apexcharts": "^3.26.0",
     "axios": "^0.20.0",
     "core-js": "^3.6.5",
     "firebase": "^8.3.1",
     "quasar": "^1.0.0",
     "vue": "^2.6.11",
+    "vue-apexcharts": "^1.6.0",
     "vue-axios": "^2.1.5",
     "vue-router": "^3.4.3",
     "vuefire": "^2.2.5",
